aesthetical changes to the book rec form with css

--- a/portfolio/src/main/webapp/style.css
+++ b/portfolio/src/main/webapp/style.css
@@ -69,6 +69,29 @@ button {
     box-shadow: 0px 0px 1px 1px #1f261a95;
 }
 
+input {
+    margin: 0.5em;
+    padding: 0.4em;
+    height:50px;
+    font-weight: var(--fw-reg);
+    font-family: var(--ff-primary);
+    color: var(--clr-dark);
+    background-color: var(--clr-accent);
+    border-radius:6px;
+    border:none;
+    box-shadow: 0px 0px 1px 1px #1f261a95;
+}
+
+textarea {
+    margin: 1em;
+    padding: 0.4em;
+    font-weight: var(--fw-reg);
+    font-family: var(--ff-primary);
+    color: var(--clr-dark);
+    background-color: #a6c085b5;
+    border:none;
+}
+
 p, li {
     font-size: 20px;
 }
